--- a/Pratica/Calculadora/style.css
+++ b/Pratica/Calculadora/style.css
@@ -11,3 +11,12 @@
     width: 100%;
     height: 500px;
 }
+
+#historico{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    resize: none;
+    width: 200px;
+    height: 200px;
+}
