--- a/Pratica/Calculadora/style.css
+++ b/Pratica/Calculadora/style.css
@@ -20,3 +20,12 @@
     width: 200px;
     height: 200px;
 }
+
+button{
+
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+}
