--- a/Pratica/Calculadora/style.css
+++ b/Pratica/Calculadora/style.css
@@ -4,28 +4,41 @@
 }
 
 .div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: aqua;
+    padding: 20px;
+    background-color: rgb(53, 53, 53);
     width: 100%;
     height: 500px;
 }
 
 #historico{
+    color: darkgray;
+    background-color: black;
+    border: none;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
     resize: none;
     width: 200px;
     height: 200px;
 }
 
 button{
-
-    width: 30px;
-    height: 30px;
+    margin: 5px;
+    background-color: azure;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    min-width: 50px;
+    height: 50px;
     font-size: 18px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-style: italic;
+    
+}
+
+button:hover{
+    color: rgb(14, 255, 6);
+    background-color: black;
+    border: solid 1px rgb(14, 255, 6);
 }
