--- a/Pratica/Calculadora/style.css
+++ b/Pratica/Calculadora/style.css
@@ -1,27 +1,45 @@
 *{
     margin: 0;
     padding: 0;
+    
+}
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
 }
 
 .div{
     padding: 20px;
     background-color: rgb(53, 53, 53);
-    width: 100%;
-    height: 500px;
+    width: 400px;
+    
 }
 
 #historico{
     color: darkgray;
     background-color: black;
     border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    width: 100%;
+    height: 100px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
-    resize: none;
-    width: 200px;
-    height: 200px;
+    resize: none; 
+}
+
+#visor{
+    color: rgb(14, 255, 6);
+    background-color: rgb(36, 36, 36);
+    text-align: right;
+    border: none;
+    display: block;
+    width: 100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 19px;
+    resize: none; 
 }
 
 button{
@@ -41,4 +59,17 @@ button:hover{
     color: rgb(14, 255, 6);
     background-color: black;
     border: solid 1px rgb(14, 255, 6);
+}
+
+#Numeros{
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+}
+
+#zero{
+
+    grid-column: 2; 
+
 }
