--- a/Pratica/Calculadora/style.css
+++ b/Pratica/Calculadora/style.css
@@ -43,7 +43,7 @@ body{
     resize: none; 
 }
 
-button{
+.buttonUm{
     margin: 5px;
     background-color: azure;
     color: black;
@@ -56,7 +56,7 @@ button{
     
 }
 
-button:hover{
+.buttonUm:hover{
     color: rgb(14, 255, 6);
     background-color: black;
     border: solid 1px rgb(14, 255, 6);
@@ -92,4 +92,23 @@ button:hover{
     margin-top: 50px;
     border-radius: 20px;
     border: 2px solid gray;
+}
+
+.buttonDois{
+    margin: 5px;
+    background-color: rgb(0, 0, 0);
+    color: rgb(250, 250, 250);
+    border: none;
+    border-radius: 10px;
+    min-width: 50px;
+    min-height: 50px;
+    font-size: 18px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+
+.buttonDois:hover{
+    color: rgb(247, 6, 255);
+    background-color: black;
+    border: solid 1px rgb(255, 6, 151);
 }
