--- a/Pratica/Calculadora/style.css
+++ b/Pratica/Calculadora/style.css
@@ -11,8 +11,24 @@ body{
     background-color: black;
 }
 
+/* Botão troca de Cor */
+#buttonTrocaDeCor{
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    background: none;
+    color: #fdd005;
+    text-decoration:none;
+    text-shadow: none;
+    border-style: none;
+    box-shadow: none;
+}
 
-.div{
+
+
+/* padrão de cores um, do corpo da calculador  */
+.padraoDeCorUm{
     padding: 20px;
     background-color: rgb(53, 53, 53);
     margin-top: 50px;
@@ -25,6 +41,17 @@ body{
 	color:#ffffff;
     
 }
+
+/* padrão de cores dois, do corpo da calculador  */
+.padraoDeCorDois{
+    padding: 20px;
+    background-color: rgb(248, 248, 248);
+    margin-top: 50px;
+    border-radius: 20px;
+    border: 2px solid gray;
+    display: inline-block;
+}
+
 
 #historico{
     color: darkgray;
@@ -169,15 +196,6 @@ body{
 
 
 
-.div1{
-    padding: 20px;
-    background-color: rgb(248, 248, 248);
-    margin-top: 50px;
-    border-radius: 20px;
-    border: 2px solid gray;
-    display: inline-block;
-}
-
 .buttonDois{
     margin: 5px;
     min-width: 50px;
@@ -209,15 +227,3 @@ body{
 	top:1px;
 }
 
-#trocaDeCor{
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none;
-    background: none;
-    color: #fdd005;
-    text-decoration:none;
-    text-shadow: none;
-    border-style: none;
-    box-shadow: none;
-}
